# ICX360

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: .nav.yml  CONTRIBUTING.md  index.md
docs/examples/: index.md
docs/examples/cell/: natural_language_generation.ipynb  quick_start.ipynb
docs/examples/mexgen/: RAG.ipynb  RAG_retrieved_docs.json  quick_start_doc.txt
docs/examples/th/: LLM_jailbreak.ipynb  quick_start.ipynb
docs/reference/: library_reference.md
examples/cell/: quick_start.ipynb
examples/mexgen/: RAG.ipynb  question_answering.ipynb  quick_start.ipynb  summarization.ipynb
examples/th/: quick_start.ipynb
icx360.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
icx360/algorithms/mexgen/: __init__.py  clime.py  lshap.py  mexgen.py
icx360/utils/: subset_utils.py
icx360/utils/scalarizers/: prob.py  text_only.py
